Wrapper/C C++/audiogenie3.h

DllImport BSTR __stdcall AACGetBitRateTypeW();
DllImport BSTR __stdcall AACGetHeaderTypeW();
DllImport BSTR __stdcall AACGetProfileW();
DllImport BSTR __stdcall APEGetAlbumW();
DllImport BSTR __stdcall APEGetArtistW();
DllImport BSTR __stdcall APEGetCommentW();
DllImport BSTR __stdcall APEGetCopyrightW();
DllImport BSTR __stdcall APEGetGenreW();
DllImport BSTR __stdcall APEGetItemKeysW();
DllImport BSTR __stdcall APEGetTitleW();
DllImport BSTR __stdcall APEGetTrackW();
DllImport BSTR __stdcall APEGetUserItemW(LPCWSTR Key);
DllImport BSTR __stdcall APEGetVersionW();
DllImport BSTR __stdcall APEGetYearW();
DllImport BSTR __stdcall AUDIOGetAlbumW();
DllImport BSTR __stdcall AUDIOGetArtistW();
DllImport BSTR __stdcall AUDIOGetChannelModeW();
DllImport BSTR __stdcall AUDIOGetCommentW();
DllImport BSTR __stdcall AUDIOGetComposerW();
DllImport BSTR __stdcall AUDIOGetGenreW();
DllImport BSTR __stdcall AUDIOGetLastErrorTextW();
DllImport BSTR __stdcall AUDIOGetLastFileW();
DllImport BSTR __stdcall AUDIOGetMD5ValueW();
DllImport BSTR __stdcall AUDIOGetTitleW();
DllImport BSTR __stdcall AUDIOGetTrackW();
DllImport BSTR __stdcall AUDIOGetVersionW();
DllImport BSTR __stdcall AUDIOGetYearW();
DllImport BSTR __stdcall FLACGetItemKeysW();
DllImport BSTR __stdcall FLACGetUserItemW(LPCWSTR ItemKey);
DllImport BSTR __stdcall FLACGetVendorW();
DllImport BSTR __stdcall GetAudioGenieVersionW();
DllImport BSTR __stdcall GetMD5ValueFromFileW(LPCWSTR FileName);
DllImport BSTR __stdcall ID3V1GetAlbumW();
DllImport BSTR __stdcall ID3V1GetArtistW();
DllImport BSTR __stdcall ID3V1GetCommentW();
DllImport BSTR __stdcall ID3V1GetGenreItemW(short number);
DllImport BSTR __stdcall ID3V1GetGenreW();
DllImport BSTR __stdcall ID3V1GetTitleW();
DllImport BSTR __stdcall ID3V1GetTrackW();
DllImport BSTR __stdcall ID3V1GetVersionW();
DllImport BSTR __stdcall ID3V1GetYearW();
DllImport float __stdcall AUDIOGetDurationW();
DllImport float __stdcall FLACGetCompressionRatioW();
DllImport long __stdcall APEGetSizeW();
DllImport long __stdcall AUDIOGetBitrateW();
DllImport long __stdcall AUDIOGetChannelsW();
DllImport long __stdcall AUDIOGetDurationMillisW();
DllImport long __stdcall AUDIOGetFileSizeW();
DllImport long __stdcall AUDIOGetLastErrorNumberW();
DllImport long __stdcall AUDIOGetSampleRateW();
DllImport long __stdcall FLACGetBitsPerSampleW();
DllImport long __stdcall FLACGetMaxBlockSizeW();
DllImport long __stdcall FLACGetMaxFrameSizeW();
DllImport long __stdcall FLACGetMinBlockSizeW();
DllImport long __stdcall FLACGetMinFrameSizeW();
DllImport long __stdcall FLACGetSamplesW();
DllImport long __stdcall GetConfigValueW(u32 key);
DllImport short __stdcall APEExistsW();
DllImport short __stdcall APERemoveTagFromFileW(LPCWSTR FileName);
DllImport short __stdcall APERemoveTagW();
DllImport short __stdcall APESaveChangesToFileW(LPCWSTR FileName);
DllImport short __stdcall APESaveChangesW();
DllImport short __stdcall AUDIOAnalyzeFileW(LPCWSTR FileName);
DllImport short __stdcall AUDIOIsValidFormatW();
DllImport short __stdcall AUDIOSaveChangesToFileW(LPCWSTR FileName);
DllImport short __stdcall AUDIOSaveChangesW();
DllImport short __stdcall FLACSaveChangesToFileW(LPCWSTR FileName);
DllImport short __stdcall FLACSaveChangesW();
DllImport short __stdcall ID3V1ExistsW();
DllImport short __stdcall ID3V1GetGenreIDW();
DllImport short __stdcall ID3V1GetGenresW();
DllImport short __stdcall ID3V1RemoveTagFromFileW(LPCWSTR FileName);
DllImport short __stdcall ID3V1RemoveTagW();
DllImport short __stdcall ID3V1SaveChangesToFileW(LPCWSTR FileName);
DllImport short __stdcall ID3V1SaveChangesW();
DllImport short __stdcall ID3V2AddAudioEncryptionW(BYTE *arr, u32 maxLen, LPCWSTR URL, short PreviewStart, short PreviewLength);
DllImport short __stdcall ID3V2AddAudioSeekPointW(BYTE *arr, u32 maxLen, long start, long length, short numbers, BYTE BitsPerPoint);
DllImport short __stdcall ID3V2AddChapterW(LPCWSTR ID, LPCWSTR Title, LPCWSTR Description, u32 startTime, u32 endTime);
DllImport short __stdcall ID3V2AddChildElementW(LPCWSTR ParentTocID, LPCWSTR ChildID);
DllImport short __stdcall ID3V2AddCommentW(LPCWSTR Language, LPCWSTR Description, LPCWSTR Text);
DllImport short __stdcall ID3V2AddCommercialFrameW(BYTE *arr, u32 maxLen, LPCWSTR Price, LPCWSTR validUntil, LPCWSTR contactUrl , short receivedAs , LPCWSTR seller, LPCWSTR description);
DllImport short __stdcall ID3V2AddEncryptionW(BYTE *arr, u32 maxLen, LPCWSTR URL, short Symbol);
DllImport short __stdcall ID3V2AddEqualisationW(BYTE *arr, u32 maxLen, BYTE Interpolationmethod, LPCWSTR Identification);
DllImport short __stdcall ID3V2AddEventTimingCodesW(BYTE *arr, u32 maxLen, BYTE TimestampFormat);
DllImport short __stdcall ID3V2AddGeneralObjectW(BYTE *arr, u32 maxLen, LPCWSTR Mime, LPCWSTR FileName, LPCWSTR Description);
DllImport short __stdcall ID3V2AddGroupIdentificationW(BYTE *arr, u32 length, LPCWSTR Url, BYTE symbol);
DllImport short __stdcall ID3V2AddLinkedInformationW(long FrameIdentifier, LPCWSTR URL, LPCWSTR additionalData);
DllImport short __stdcall ID3V2AddLyricW(LPCWSTR Language, LPCWSTR Description, LPCWSTR Text);
DllImport void __stdcall APESetAlbumW(LPCWSTR textString);
DllImport void __stdcall APESetArtistW(LPCWSTR textString);
DllImport void __stdcall APESetCommentW(LPCWSTR textString);
DllImport void __stdcall APESetCopyrightW(LPCWSTR textString);
DllImport void __stdcall APESetGenreW(LPCWSTR textString);
DllImport void __stdcall APESetTitleW(LPCWSTR textString);
DllImport void __stdcall APESetTrackW(LPCWSTR textString);
DllImport void __stdcall APESetUserItemW(LPCWSTR Key, LPCWSTR textString);
DllImport void __stdcall APESetYearW(LPCWSTR textString);
DllImport void __stdcall AUDIOSetAlbumW(LPCWSTR textString);
DllImport void __stdcall AUDIOSetArtistW(LPCWSTR textString);
DllImport void __stdcall AUDIOSetCommentW(LPCWSTR textString);
DllImport void __stdcall AUDIOSetComposerW(LPCWSTR textString);
DllImport void __stdcall AUDIOSetGenreW(LPCWSTR textString);
DllImport void __stdcall AUDIOSetTitleW(LPCWSTR textString);
DllImport void __stdcall AUDIOSetTrackW(LPCWSTR textString);
DllImport void __stdcall AUDIOSetYearW(LPCWSTR textString);
DllImport void __stdcall FLACSetUserItemW(LPCWSTR ItemKey, LPCWSTR textString);
DllImport void __stdcall FLACSetVendorW(LPCWSTR textString);
DllImport void __stdcall ID3V1SetAlbumW(LPCWSTR textString);
DllImport void __stdcall ID3V1SetArtistW(LPCWSTR textString);
DllImport void __stdcall ID3V1SetCommentW(LPCWSTR textString);
DllImport void __stdcall ID3V1SetGenreIDW(short nNewValue);
DllImport void __stdcall ID3V1SetGenreW(LPCWSTR textString);
DllImport void __stdcall ID3V1SetTitleW(LPCWSTR textString);
DllImport void __stdcall ID3V1SetTrackW(LPCWSTR textString);
DllImport void __stdcall ID3V1SetYearW(LPCWSTR textString);