Wrapper/VB6/clsAudioGenie.cls

VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
  Persistable = 0  'NotPersistable
  DataBindingBehavior = 0  'vbNone
  DataSourceBehavior  = 0  'vbNone
  MTSTransactionMode  = 0  'NotAnMTSObject
END
Attribute VB_Name = "clsAudioGenie"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = True
Attribute VB_PredeclaredId = False
Attribute VB_Exposed = False
' *******************************************************
' ******* AUDIOGENIE DLL WRAPPER FOR VISUAL BASIC *******
' *******************************************************
' *   this class is a Wrapper for the audiogenie2.dll   *
' *    written by Stefan Toengi, www.audiogenie.net     *
' *  Visit my forum under http://forum.audiogenie.net   *
' * To use this class, copy this file in your project   *
' * and the audiogenie2.dll in the %Windows%\system32   *
' * folder(32bit) or %Windows%\SysWOW64 folder(64bit).  *
' * Now you can use this class like the example         *
'  Dim Genie As clsAudioGenie
'  Set Genie = New clsAudioGenie
'  Genie.AUDIOAnalyzeFile(file$)
' *******************************************************
' *******  Copyright 2007-2010 by Stefan Toengi   *******
' *******************************************************
Option Explicit
Private Declare Function AACGetBitRateTypeW Lib "AudioGenie3.dll" () As String
Private Declare Function AACGetHeaderTypeW Lib "AudioGenie3.dll" () As String
Private Declare Function AACGetProfileW Lib "AudioGenie3.dll" () As String
Private Declare Function APEExistsW Lib "AudioGenie3.dll" () As Integer
Private Declare Function APEGetAlbumW Lib "AudioGenie3.dll" () As String
Private Declare Function APEGetArtistW Lib "AudioGenie3.dll" () As String
Private Declare Function APEGetCommentW Lib "AudioGenie3.dll" () As String
Private Declare Function APEGetCopyrightW Lib "AudioGenie3.dll" () As String
Private Declare Function APEGetGenreW Lib "AudioGenie3.dll" () As String
Private Declare Function APEGetItemKeysW Lib "AudioGenie3.dll" () As String
Private Declare Function APEGetSizeW Lib "AudioGenie3.dll" () As Long
Private Declare Function APEGetTitleW Lib "AudioGenie3.dll" () As String
Private Declare Function APEGetTrackW Lib "AudioGenie3.dll" () As String
Private Declare Function APEGetUserItemW Lib "AudioGenie3.dll" (ByVal key As Long) As String
Private Declare Function APEGetVersionW Lib "AudioGenie3.dll" () As String
Private Declare Function APEGetYearW Lib "AudioGenie3.dll" () As String
Private Declare Function APERemoveTagFromFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As Integer
Private Declare Function APERemoveTagW Lib "AudioGenie3.dll" () As Integer
Private Declare Function APESaveChangesToFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As Integer
Private Declare Function APESaveChangesW Lib "AudioGenie3.dll" () As Integer
Private Declare Sub APESetAlbumW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub APESetArtistW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub APESetCommentW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub APESetCopyrightW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub APESetGenreW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub APESetTitleW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub APESetTrackW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub APESetUserItemW Lib "AudioGenie3.dll" (ByVal key As Long, ByVal textString As Long)
Private Declare Sub APESetYearW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Function AUDIOAnalyzeFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As Integer
Private Declare Function AUDIOIsValidFormatW Lib "AudioGenie3.dll" () As Integer
Private Declare Function AUDIOGetAlbumW Lib "AudioGenie3.dll" () As String
Private Declare Function AUDIOGetArtistW Lib "AudioGenie3.dll" () As String
Private Declare Function AUDIOGetBitrateW Lib "AudioGenie3.dll" () As Long
Private Declare Function AUDIOGetChannelModeW Lib "AudioGenie3.dll" () As String
Private Declare Function AUDIOGetChannelsW Lib "AudioGenie3.dll" () As Long
Private Declare Function AUDIOGetCommentW Lib "AudioGenie3.dll" () As String
Private Declare Function AUDIOGetComposerW Lib "AudioGenie3.dll" () As String
Private Declare Function AUDIOGetDurationMillisW Lib "AudioGenie3.dll" () As Long
Private Declare Function AUDIOGetDurationW Lib "AudioGenie3.dll" () As Single
Private Declare Function AUDIOGetFileSizeW Lib "AudioGenie3.dll" () As Long
Private Declare Function AUDIOGetGenreW Lib "AudioGenie3.dll" () As String
Private Declare Function AUDIOGetLastErrorNumberW Lib "AudioGenie3.dll" () As Long
Private Declare Function AUDIOGetLastErrorTextW Lib "AudioGenie3.dll" () As String
Private Declare Function AUDIOGetLastFileW Lib "AudioGenie3.dll" () As String
Private Declare Function AUDIOGetMD5ValueW Lib "AudioGenie3.dll" () As String
Private Declare Function AUDIOGetSampleRateW Lib "AudioGenie3.dll" () As Long
Private Declare Function AUDIOGetTitleW Lib "AudioGenie3.dll" () As String
Private Declare Function AUDIOGetTrackW Lib "AudioGenie3.dll" () As String
Private Declare Function AUDIOGetVersionW Lib "AudioGenie3.dll" () As String
Private Declare Function AUDIOGetYearW Lib "AudioGenie3.dll" () As String
Private Declare Function AUDIOSaveChangesToFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As Integer
Private Declare Function AUDIOSaveChangesW Lib "AudioGenie3.dll" () As Integer
Private Declare Sub AUDIOSetAlbumW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub AUDIOSetArtistW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub AUDIOSetCommentW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub AUDIOSetComposerW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub AUDIOSetGenreW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub AUDIOSetTitleW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub AUDIOSetTrackW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub AUDIOSetYearW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Function FLACGetBitsPerSampleW Lib "AudioGenie3.dll" () As Long
Private Declare Function FLACGetCompressionRatioW Lib "AudioGenie3.dll" () As Single
Private Declare Function FLACGetItemKeysW Lib "AudioGenie3.dll" () As String
Private Declare Function FLACGetMaxBlockSizeW Lib "AudioGenie3.dll" () As Long
Private Declare Function FLACGetMaxFrameSizeW Lib "AudioGenie3.dll" () As Long
Private Declare Function FLACGetMinBlockSizeW Lib "AudioGenie3.dll" () As Long
Private Declare Function FLACGetMinFrameSizeW Lib "AudioGenie3.dll" () As Long
Private Declare Function FLACGetSamplesW Lib "AudioGenie3.dll" () As Long
Private Declare Function FLACGetUserItemW Lib "AudioGenie3.dll" (ByVal ItemKey As Long) As String
Private Declare Function FLACGetVendorW Lib "AudioGenie3.dll" () As String
Private Declare Function FLACSaveChangesToFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As Integer
Private Declare Function FLACSaveChangesW Lib "AudioGenie3.dll" () As Integer
Private Declare Sub FLACSetUserItemW Lib "AudioGenie3.dll" (ByVal ItemKey As Long, ByVal textString As Long)
Private Declare Sub FLACSetVendorW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Function GetAudioGenieVersionW Lib "AudioGenie3.dll" () As String
Private Declare Function GetConfigValueW Lib "AudioGenie3.dll" (ByVal key As Long) As Long
Private Declare Function GetMD5ValueFromFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As String
Private Declare Function ID3V1ExistsW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V1GetAlbumW Lib "AudioGenie3.dll" () As String
Private Declare Function ID3V1GetArtistW Lib "AudioGenie3.dll" () As String
Private Declare Function ID3V1GetCommentW Lib "AudioGenie3.dll" () As String
Private Declare Function ID3V1GetGenreIDW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V1GetGenreItemW Lib "AudioGenie3.dll" (ByVal number As Integer) As String
Private Declare Function ID3V1GetGenreW Lib "AudioGenie3.dll" () As String
Private Declare Function ID3V1GetGenresW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V1GetTitleW Lib "AudioGenie3.dll" () As String
Private Declare Function ID3V1GetTrackW Lib "AudioGenie3.dll" () As String
Private Declare Function ID3V1GetVersionW Lib "AudioGenie3.dll" () As String
Private Declare Function ID3V1GetYearW Lib "AudioGenie3.dll" () As String
Private Declare Function ID3V1RemoveTagFromFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As Integer
Private Declare Function ID3V1RemoveTagW Lib "AudioGenie3.dll" () As Integer
Private Declare Function ID3V1SaveChangesToFileW Lib "AudioGenie3.dll" (ByVal FileName As Long) As Integer
Private Declare Function ID3V1SaveChangesW Lib "AudioGenie3.dll" () As Integer
Private Declare Sub ID3V1SetAlbumW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub ID3V1SetArtistW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub ID3V1SetCommentW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub ID3V1SetGenreIDW Lib "AudioGenie3.dll" (ByVal nNewValue As Integer)
Private Declare Sub ID3V1SetGenreW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub ID3V1SetTitleW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub ID3V1SetTrackW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Sub ID3V1SetYearW Lib "AudioGenie3.dll" (ByVal textString As Long)
Private Declare Function ID3V2AddAudioEncryptionW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal URL As Long, ByVal PreviewStart As Integer, ByVal PreviewLength As Integer) As Integer
Private Declare Function ID3V2AddAudioSeekPointW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal start As Long, ByVal Length As Long, ByVal numbers As Integer, ByVal BitsPerPoint As Byte) As Integer
Private Declare Function ID3V2AddChapterW Lib "AudioGenie3.dll" (ByVal ID As Long, ByVal Title As Long, ByVal Description As Long, ByVal startTime As Long, ByVal endTime As Long) As Integer
Private Declare Function ID3V2AddChildElementW Lib "AudioGenie3.dll" (ByVal ParentTocID As Long, ByVal ChildID As Long) As Integer
Private Declare Function ID3V2AddCommentW Lib "AudioGenie3.dll" (ByVal Language As Long, ByVal Description As Long, ByVal text As Long) As Integer
Private Declare Function ID3V2AddCommercialFrameW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Price As Long, ByVal validUntil As Long, ByVal contactUrl As Long, ByVal receivedAs As Integer, ByVal Seller As Long, ByVal Description As Long) As Integer
Private Declare Function ID3V2AddEncryptionW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal URL As Long, ByVal symbol As Integer) As Integer
Private Declare Function ID3V2AddEqualisationW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Interpolationmethod As Byte, ByVal Identification As Long) As Integer
Private Declare Function ID3V2AddEventTimingCodesW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal TimestampFormat As Byte) As Integer
Private Declare Function ID3V2AddGeneralObjectW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal maxLen As Long, ByVal Mime As Long, ByVal FileName As Long, ByVal Description As Long) As Integer
Private Declare Function ID3V2AddGroupIdentificationW Lib "AudioGenie3.dll" (ByVal arr As Long, ByVal Length As Long, ByVal URL As Long, ByVal symbol As Byte) As Integer
Private Declare Function ID3V2AddLinkedInformationW Lib "AudioGenie3.dll" (ByVal FrameIdentifier As Long, ByVal URL As Long, ByVal additionalData As Long) As Integer
Private Declare Function ID3V2AddLyricW Lib "AudioGenie3.dll" (ByVal Language As Long, ByVal Description As Long, ByVal text As Long) As Integer
